# italy-opendata-mcp

./: .gitignore  README.md  pyproject.toml  server.json
src/italy_opendata_mcp/: __main__.py  cache.py  normalise.py  server.py
