[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "italy-opendata-mcp"
version = "1.0.0"
description = "Server MCP per open data italiani (comuni, province, regioni, CAP, coordinate, dati geografici)"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "httpx",
    "openpyxl",
]

[project.scripts]
italy-opendata-mcp = "italy_opendata_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
